# TennoHelios

./: .gitignore  CLAUDE.md  README.md  TASKS.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
flatpak/: cargo-sources.json  io.github.tennohelios.desktop  io.github.tennohelios.metainfo.xml  io.github.tennohelios.yml  npm-sources.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  log_watcher.rs  main.rs  market_api.rs  ocr.rs  screenshot.rs
src/components/: BestPickIndicator.tsx  ItemCard.tsx  RewardOverlay.tsx  SettingsOverlay.tsx  icons.tsx
src/hooks/: useCountUp.ts
