[package]
name = "tennohelios"
version = "0.1.0"
description = "Linux-native Warframe companion overlay"
authors = []
edition = "2024"
license = "GPL-3.0"

[lib]
name = "tennohelios_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tennohelios"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File watching
notify = "6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"   # slim binary
codegen-units = 1 # better optimisation
lto = true
opt-level = "s"   # size
strip = true
